--- a/index.html
+++ b/index.html
@@ -1,15 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
     <title>Smash It - Weather</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
 
-    <div>
-        Content
-    </div>
+    <h3 class="text-center">Smash It Weather</h3>
+
+
+    <section class="searchContainer">
+        <div class="filterOptionsContainer">
+            <label for="filterOptions">Location</label>
+            <select id="filterOptions">
+                <option value="newyork">New York</option>
+                <option value="ghana">Ghana</option>
+                <option value="nigeria">Nigeria</option>
+            </select>
+        </div>
+
+        <div class="filterOptionsContainer">
+            <label for="filterOptions">Filter</label>
+            <select id="filterOptions">
+                <option value="summary">Summary</option>
+                <option value="hourly">Hourly</option>
+                <option value="weekly">Week</option>
+            </select>
+        </div>
+
+    </section>
+
+    <section class="weatherData">
+
+        <div id="c-1" class="weather-container">
+ 
+            <div class="weather-card">
+
+                <div class="weather-header">
+                    <div class="period">
+                        <p class="text-center">Current</p>
+                    </div>
+                    <div class="event-status safe text-center">
+
+                    </div>
+                    <h3 class="weather-title text-center">Loading...</h3>
+                    <p class="weather-description text-center"></p>
+                </div>
+
+                <div class="weather-image">
+
+                </div>
+
+                <div class="weather-details text-center">
+
+                </div>
+            </div>
+        </div>
+
+        <div id="weatherTemplate" class="weather-container">
+            <div class="weather-card">
+
+                <div class="weather-header">
+                    <div class="period">
+                        <p class="text-center">Day</p>
+                    </div>
+                    <div class="event-status safe text-center">
+
+                    </div>
+                    <h3 class="weather-title text-center">Loading...</h3>
+                    <p class="weather-description text-center"></p>
+                </div>
+
+                <div class="weather-image">
+
+                </div>
+
+                <div class="weather-details text-center">
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+
     <script src="./index.js"></script>
 </body>
+
 </html>
