Rain data states now working

--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
             <div class="weather-card">
 
                 <div class="weather-header">
-                    <div class="period">
-                        <p class="text-center">Current</p>
-                    </div>
                     <div class="event-status safe text-center">
 
                     </div>
@@ -67,10 +64,7 @@
             <div class="weather-card">
 
                 <div class="weather-header">
-                    <div class="period">
-                        <p class="text-center">Day</p>
-                    </div>
-                    <div class="event-status safe text-center">
+                    <div class="event-status text-center">
 
                     </div>
                     <h3 class="weather-title text-center">Loading...</h3>
