--- a/hourly.html
+++ b/hourly.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
-    <title>Smash It - Weather</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,800&display=swap"
-        rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hourly Weather</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-
 <body>
-
     <h3 class="text-center">Smash It Weather</h3>
-
 
     <section class="searchContainer">
         <button id="summary"><a href="./index.html">Summary</a></button>
@@ -21,13 +15,7 @@
         <button id="hourly"><a href="./hourly.html">Hourly</a></button>
         <!-- summary, hourly, weekly -->
     </section>
-
-
-
-
-
-
+    
     <script src="./index.js"></script>
 </body>
-
 </html>
