completed code optimisations added the webworker, yet to add the realtime requests to the API

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
     </section>
 
 
-
+ <div class="summaryConatiner">
+     <div class="summaryItem">
+        <h3 id="title" class="text-center"></h3>
+        <h5 id="date" class="text-center"></h5>
+    
+        <div id="weatherImage"></div>
+    
+        <div id="weatherDetails" class="text-center"></div>
+     </div>
+ </div>
 
 
 
