--- a/hourly.html
+++ b/hourly.html
@@ -15,6 +15,55 @@
         <button id="hourly"><a href="./hourly.html">Hourly</a></button>
         <!-- summary, hourly, weekly -->
     </section>
+
+    
+    <section class="weatherData">
+
+        <div id="c-1" class="weather-container">
+ 
+            <div class="weather-card">
+
+                <div class="weather-header">
+                    <div class="event-status safe text-center">
+
+                    </div>
+                    <h3 class="weather-title text-center">Loading...</h3>
+                    <p class="weather-description text-center"></p>
+                </div>
+
+                <div class="weather-image">
+
+                </div>
+
+                <div class="weather-details text-center">
+
+                </div>
+            </div>
+        </div>
+
+        <div id="weatherTemplate" class="weather-container">
+            <div class="weather-card">
+
+                <div class="weather-header">
+                    <div class="event-status text-center">
+
+                    </div>
+                    <h3 class="weather-title text-center">Loading...</h3>
+                    <p class="weather-description text-center"></p>
+                </div>
+
+                <div class="weather-image">
+
+                </div>
+
+                <div class="weather-details text-center">
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+
     
     <script src="./index.js"></script>
 </body>
