--- a/hourly.html
+++ b/hourly.html
@@ -6,7 +6,7 @@
     <title>Hourly Weather</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="manifest" href="./manifest.webmanifest">
-
+    <link rel="apple-touch-icon" href="./icon-192.png">
 </head>
 <body>
     <h3 class="text-center">Smash It Weather</h3>
