--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
+    <meta name="description" content="Weather Application">
     <title>Smash It - Weather</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <link rel="manifest" href="./manifest.webmanifest">
+    <link rel="apple-touch-icon" href="./icon-192.png">
+    <meta name="theme-color" content="#1698ff">
+
 </head>
 
 <body>
@@ -24,9 +28,17 @@
     </section>
 
 
-    <section class="searchContainer">
-        <input id="searchbox" type="text" placeholder="Type country or region here"><button id="searchButton">search</button>
-    </section>
+    <div class="flex-row">
+        <section class="searchContainer">
+            <div>
+                <label for="searchbox" class="text-center">Search country or region here</label>
+            </div>
+            <div>
+                <input id="searchbox" type="text" placeholder="Type country or region here">
+                <button id="searchButton">search</button>
+            </div>
+        </section>
+    </div>
 
 
     <div class="summaryConatiner">
