--- a/weekly.html
+++ b/weekly.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="apple-touch-icon" href="./icon-192.png">
+    <meta name="theme-color" content="#1698ff">
+
 </head>
 <body>
     <h3 class="text-center">Smash It Weather</h3>
@@ -51,17 +53,17 @@
                     <div class="event-status text-center">
 
                     </div>
-                    <h3 class="weather-title text-center">Loading...</h3>
+                    <time><h3 class="weather-title text-center">Loading...</h3></time>
                     <p class="weather-description text-center"></p>
                 </div>
 
-                <div class="weather-image">
+                <figure class="weather-image">
 
-                </div>
+                </figure>
 
-                <div class="weather-details text-center">
+                <details class="weather-details text-center">
 
-                </div>
+                </details>
             </div>
         </div>
 
