Last update fixed the flex gap, gap is not available on all devices yet, so added margin to that. replaced details tag with only summary

--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
 
         <div class="summaryConatiner">
             <div class="summaryItem">
-                <h3 id="title" class="text-center"></h3>
-                <h4 id="description"></h4>
+                <h5 id="title" class="text-center"></h5>
+               
                 <time>
                     <h5 id="date" class="text-center"></h5>
                 </time>
 
+                <p id="description" class="text-center"></p>
+
                 <figure id="weatherImage"></figure>
 
-                <details id="weatherDetails" class="text-center"></details>
+                <summary id="weatherDetails" class="text-center"></summary>
             </div>
         </div>
 
