--- a/weekly.html
+++ b/weekly.html
@@ -32,17 +32,17 @@
                     <div class="event-status safe text-center">
 
                     </div>
-                    <h3 class="weather-title text-center">Loading...</h3>
+                    <h5 class="weather-title text-center">Loading...</h5>
                     <p class="weather-description text-center"></p>
                 </div>
 
-                <div class="weather-image">
+                <figure class="weather-image">
 
-                </div>
+                </figure>
 
-                <div class="weather-details text-center">
+                <summary class="weather-details text-center">
 
-                </div>
+                </summary>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
                     <div class="event-status text-center">
 
                     </div>
-                    <time><h3 class="weather-title text-center">Loading...</h3></time>
+                    <time><h5 class="weather-title text-center">Loading...</h5></time>
                     <p class="weather-description text-center"></p>
                 </div>
 
@@ -61,9 +61,9 @@
 
                 </figure>
 
-                <details class="weather-details text-center">
+                <summary class="weather-details text-center">
 
-                </details>
+                </summary>
             </div>
         </div>
 
