--- a/hourly.html
+++ b/hourly.html
@@ -33,7 +33,7 @@
                     <div class="event-status safe text-center">
 
                     </div>
-                    <h3 class="weather-title text-center">Loading...</h3>
+                    <h5 class="weather-title text-center">Loading...</h5>
                     <p class="weather-description text-center"></p>
                 </div>
 
@@ -41,9 +41,9 @@
 
                 </figure>
 
-                <details class="weather-details text-center">
+                <summary class="weather-details text-center">
 
-                </details>
+                </summary>
             </div>
         </div>
 
@@ -54,7 +54,7 @@
                     <div class="event-status text-center">
 
                     </div>
-                    <time><h3 class="weather-title text-center">Loading...</h3></time>
+                    <time><h5 class="weather-title text-center">Loading...</h5></time>
                     <p class="weather-description text-center"></p>
                 </div>
 
@@ -62,9 +62,9 @@
 
                 </figure>
 
-                <details class="weather-details text-center">
+                <summary class="weather-details text-center">
 
-                </details>
+                </summary>
             </div>
         </div>
 
