search button now accessible via the enter key, following the Web Standards

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <div>
                 <label for="searchbox" class="text-center">Search country or region here</label>
             </div>
-            <div>
+            <form id="searchForm">
                 <input id="searchbox" type="text" placeholder="Type country or region here">
-                <button id="searchButton">search</button>
-            </div>
+                <button type="submit" id="searchButton">search</button>
+            </form>
         </section>
     </div>
 
